[package]
name = "sqlx-concat-query"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"


[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.51", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.26"

[dev-dependencies]
sqlx = { version = "^0.5", features = ["mysql", "macros", "runtime-async-std-native-tls"] }
tokio = { version = "1.0.0", features = ["full"] }
